Novo exemplo de redução de imagem

--- a/Trabalhando com imagens/Pillow/pillow.ipynb
+++ b/Trabalhando com imagens/Pillow/pillow.ipynb
@@ -408,6 +408,56 @@
     "new_im.save('Produtivese2_NewSize.png')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O tamanho da imagem foto_project.jpg é:\n",
+      " >>> (5659, 3773)\n",
+      "\n",
+      "O formato da imagem foto_project.jpg é:\n",
+      " >>> JPEG\n",
+      "\n",
+      ">>> width = 5659\n",
+      ">>> height = 3773\n",
+      "\n",
+      ">>> new_height = 267\n",
+      "\n",
+      "O tamanho da imagem foto_project_new.jpg é:\n",
+      " >>> (400, 267)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "im = Image.open('foto_project.jpg')\n",
+    "print(f'O tamanho da imagem {im.filename} é:\\n >>> {im.size}')\n",
+    "print(f'\\nO formato da imagem {im.filename} é:\\n >>> {im.format}')\n",
+    "\n",
+    "# largura e altura padrão\n",
+    "new_width = 400\n",
+    "\n",
+    "# desencapsulando im.size\n",
+    "width, height = im.size\n",
+    "print(f'\\n>>> width = {width}\\n>>> height = {height}')\n",
+    "\n",
+    "# redimensionando height na mesma proporção que new_width (arredondado)\n",
+    "new_height = round(new_width * height / width)\n",
+    "print(f'\\n>>> new_height = {new_height}')\n",
+    "\n",
+    "# reduzindo imagem\n",
+    "new_im = im.resize((new_width, new_height), Image.LANCZOS)\n",
+    "new_im.save('foto_project_new.jpg', optimize=True, quality=70)\n",
+    "\n",
+    "im = Image.open('foto_project_new.jpg')\n",
+    "print(f'\\nO tamanho da imagem {im.filename} é:\\n >>> {im.size}')"
+   ]
   }
  ],
  "metadata": {
