Criando uma string de uma lista

--- a/Coleções_Python_Iteraveis/Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/Comprehensions.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists Comprehensions\r\n",
-    "\r\n",
-    "List comprehensions (abrangências de lista) são um dos recursos mais amados da linguagem Python. \r\n",
+    "# Lists Comprehensions\n",
+    "\n",
+    "List comprehensions (abrangências de lista) são um dos recursos mais amados da linguagem Python. \n",
     "Elas permitem que você componha uma nova lista de modo conciso, filtrando os elementos de uma coleção, transformando os elementos ao passar o filtro, com uma expressão concisa. A condição de filtro pode ser omitida, restando somente a expressão."
    ]
   },
@@ -14,13 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sintaxe \r\n",
-    "A sintaxe geral de compreensão de lista é a seguinte. Consiste em três partes: iteração, transformação e filtragem.\r\n",
-    "\r\n",
-    "![Sintax List Comprehensions](list-comprehension-syntax.jpg)\r\n",
-    "\r\n",
-    "* **Iteração**: esta é a primeira parte executada em uma compreensão de lista que itera por todos os elementos do iterável. \r\n",
-    "* **Transformação**: como o nome diz, a transformação será aplicada a cada elemento do iterável. No exemplo acima, estamos elevando ao quadrado cada elemento do iterável.\r\n",
+    "## Sintaxe \n",
+    "A sintaxe geral de compreensão de lista é a seguinte. Consiste em três partes: iteração, transformação e filtragem.\n",
+    "\n",
+    "![Sintax List Comprehensions](list-comprehension-syntax.jpg)\n",
+    "\n",
+    "* **Iteração**: esta é a primeira parte executada em uma compreensão de lista que itera por todos os elementos do iterável. \n",
+    "* **Transformação**: como o nome diz, a transformação será aplicada a cada elemento do iterável. No exemplo acima, estamos elevando ao quadrado cada elemento do iterável.\n",
     "* **Filtro (opcional)**: é opcional e filtra alguns dos elementos com base nas condições. O exemplo acima percorre todos os elementos de 1 a 10, filtra os números ímpares e considera apenas os números positivos antes de aplicar a transformação."
    ]
   },
@@ -28,8 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists Comprehensions simples _**SEM**_ filtro \r\n",
-    "\r\n",
+    "# Lists Comprehensions simples _**SEM**_ filtro \n",
+    "\n",
     "## Converte todas as strings da lista em maiúsculas."
    ]
   },
@@ -47,13 +47,13 @@
     }
    ],
    "source": [
-    "# Com for\r\n",
-    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\r\n",
-    "lista = []\r\n",
-    "\r\n",
-    "for fruta in frutas:\r\n",
-    "    lista.append(fruta.upper())\r\n",
-    "\r\n",
+    "# Com for\n",
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "lista = []\n",
+    "\n",
+    "for fruta in frutas:\n",
+    "    lista.append(fruta.upper())\n",
+    "\n",
     "print(lista)"
    ]
   },
@@ -71,12 +71,12 @@
     }
    ],
    "source": [
-    "# Com list comprehensions\r\n",
-    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\r\n",
-    "lista = []\r\n",
-    "\r\n",
-    "lista = [fruta.upper() for fruta in frutas]\r\n",
-    "\r\n",
+    "# Com list comprehensions\n",
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "lista = []\n",
+    "\n",
+    "lista = [fruta.upper() for fruta in frutas]\n",
+    "\n",
     "print(lista)"
    ]
   },
@@ -94,8 +94,8 @@
     }
    ],
    "source": [
-    "inteiros = [1,3,4,5,7,8]\r\n",
-    "quadrados = [(n * n) for n in inteiros] # potencia de n para cada n na lista inteiros\r\n",
+    "inteiros = [1,3,4,5,7,8]\n",
+    "quadrados = [(n * n) for n in inteiros] # potencia de n para cada n na lista inteiros\n",
     "print(quadrados)"
    ]
   },
@@ -113,9 +113,9 @@
     }
    ],
    "source": [
-    "# Converter Celsius para Fahrenheit\r\n",
-    "celsius = [0,10,20.1,34.5]\r\n",
-    "fahrenheit = [ ((float(9)/5)*temp + 32) for temp in celsius ]\r\n",
+    "# Converter Celsius para Fahrenheit\n",
+    "celsius = [0,10,20.1,34.5]\n",
+    "fahrenheit = [ ((float(9)/5)*temp + 32) for temp in celsius ]\n",
     "print(fahrenheit)"
    ]
   },
@@ -123,8 +123,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists Comprehensions simples _**COM**_ filtro _**IF**_\r\n",
-    "\r\n",
+    "# Lists Comprehensions simples _**COM**_ filtro _**IF**_\n",
+    "\n",
     "Observe que a instrução if vem após o loop. Em geral, se a condição é usada para filtragem."
    ]
   },
@@ -142,14 +142,14 @@
     }
    ],
    "source": [
-    "# Com for - filtrando números pares\r\n",
-    "inteiros = [1,3,4,5,7,8,9]\r\n",
-    "pares = []\r\n",
-    "\r\n",
-    "for numero in inteiros:\r\n",
-    "    if numero % 2 == 0:\r\n",
-    "        pares.append(numero)\r\n",
-    "        \r\n",
+    "# Com for - filtrando números pares\n",
+    "inteiros = [1,3,4,5,7,8,9]\n",
+    "pares = []\n",
+    "\n",
+    "for numero in inteiros:\n",
+    "    if numero % 2 == 0:\n",
+    "        pares.append(numero)\n",
+    "        \n",
     "print(pares)"
    ]
   },
@@ -167,21 +167,48 @@
     }
    ],
    "source": [
-    "# Com list comprehensions - filtrando números pares\r\n",
-    "inteiros = [1,3,4,5,7,8,9]\r\n",
-    "pares = []\r\n",
-    "\r\n",
-    "pares = [ numero for numero in inteiros if numero % 2 == 0]\r\n",
-    "\r\n",
+    "# Com list comprehensions - filtrando números pares\n",
+    "inteiros = [1,3,4,5,7,8,9]\n",
+    "pares = []\n",
+    "\n",
+    "pares = [ numero for numero in inteiros if numero % 2 == 0]\n",
+    "\n",
     "print(pares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Main -> Survey -> Livio'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Criando uma string de uma lista\n",
+    "\n",
+    "lista = ['Main', 'Survey', 'Livio']\n",
+    "\n",
+    "t = ''\n",
+    "texto = t.join([f' -> {string}' if lista.index(string) > 0 else string for string in lista])\n",
+    "\n",
+    "texto"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lists Comprehensions simples _**COM**_ filtro _**IF - ELSE**_\r\n",
-    "\r\n",
+    "## Lists Comprehensions simples _**COM**_ filtro _**IF - ELSE**_\n",
+    "\n",
     "Quando o if-else é usado com a compreensão de lista, a sintaxe é um pouco diferente em comparação com a compreensão apenas com a instrução if. O exemplo a seguir calcula os números pares quadrados e o cubo de números ímpares entre 1 e 10 usando uma instrução if-else."
    ]
   },
@@ -199,8 +226,8 @@
     }
    ],
    "source": [
-    "lista = [i**2 if i%2==0 else i**3 for i in range(1,11)]\r\n",
-    "\r\n",
+    "lista = [i**2 if i%2==0 else i**3 for i in range(1,11)]\n",
+    "\n",
     "print(lista)"
    ]
   },
@@ -208,8 +235,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List Comprehensions _**ANINHADAS**_\r\n",
-    "\r\n",
+    "# List Comprehensions _**ANINHADAS**_\n",
+    "\n",
     "É possível escrever compreensões de lista aninhada, o que significa que você pode incluir uma compreensão de lista dentro de outra. Um dos usos das compreensões de lista aninhada é que elas podem ser usadas para criar matrizes n-dimensionais. "
    ]
   },
@@ -234,8 +261,8 @@
     }
    ],
    "source": [
-    "matriz = [[i*j for j in range(5)] for i in range(5)]\r\n",
-    "\r\n",
+    "matriz = [[i*j for j in range(5)] for i in range(5)]\n",
+    "\n",
     "print(matriz)"
    ]
   },
@@ -243,8 +270,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List Comprehensions _**ANINHADAS**_ com LOOPs\r\n",
-    "\r\n",
+    "# List Comprehensions _**ANINHADAS**_ com LOOPs\n",
+    "\n",
     "Também é possível incluir vários loops em compreensões de lista. Você pode usar quantos loops quiser. Mas, como prática recomendada, você deve limitar a profundidade a dois para não perder a legibilidade. O exemplo a seguir usa dois loops for. "
    ]
   },
@@ -262,8 +289,8 @@
     }
    ],
    "source": [
-    "matriz = [i+j for i in range(2) for j in range(2)]\r\n",
-    "\r\n",
+    "matriz = [i+j for i in range(2) for j in range(2)]\n",
+    "\n",
     "print(matriz)"
    ]
   },
@@ -281,11 +308,11 @@
     }
    ],
    "source": [
-    "# Um dos usos dos loops aninhados é vetorizar a matriz (achatando a matriz). \r\n",
-    "# No exemplo abaixo, my_matrix é uma matriz 2 × 2. Usando loops aninhados, \r\n",
-    "# podemos criar uma versão vetorial.\r\n",
-    "minha_matriz = [[1, 2, 3], [4, 5, 6]]\r\n",
-    "\r\n",
+    "# Um dos usos dos loops aninhados é vetorizar a matriz (achatando a matriz). \n",
+    "# No exemplo abaixo, my_matrix é uma matriz 2 × 2. Usando loops aninhados, \n",
+    "# podemos criar uma versão vetorial.\n",
+    "minha_matriz = [[1, 2, 3], [4, 5, 6]]\n",
+    "\n",
     "print([valor for linha in minha_matriz for valor in linha] )"
    ]
   },
@@ -293,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List Comprehensions _**MULTILINHA**_\r\n",
+    "# List Comprehensions _**MULTILINHA**_\n",
     "Você também pode escrever compreensões de lista multilinhas e são preferidas quando você não consegue encaixar todas as instruções em uma linha. Eles apenas aumentam a legibilidade e não oferecem nenhum benefício adicional."
    ]
   },
@@ -311,8 +338,8 @@
     }
    ],
    "source": [
-    "lista = [(i, j, k) for i in range(2) for j in range(2) for k in range(2)] # uma única linha\r\n",
-    "\r\n",
+    "lista = [(i, j, k) for i in range(2) for j in range(2) for k in range(2)] # uma única linha\n",
+    "\n",
     "print(lista)"
    ]
   },
@@ -330,12 +357,12 @@
     }
    ],
    "source": [
-    "lista = [(i, j, k) \r\n",
-    "         for i in range(2) \r\n",
-    "         for j in range(2) \r\n",
-    "         for k in range(2)\r\n",
-    "         ] # multi linha\r\n",
-    "\r\n",
+    "lista = [(i, j, k) \n",
+    "         for i in range(2) \n",
+    "         for j in range(2) \n",
+    "         for k in range(2)\n",
+    "         ] # multi linha\n",
+    "\n",
     "print(lista)"
    ]
   },
@@ -343,8 +370,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List Comprehensions Vs map( )\r\n",
-    "\r\n",
+    "# List Comprehensions Vs map( )\n",
+    "\n",
     "A compreensão de lista pode ser uma alternativa à função de map( ). E também é mais rápida que a mesma."
    ]
   },
@@ -363,12 +390,12 @@
     }
    ],
    "source": [
-    "# Map function\r\n",
-    "map_ex = list(map(lambda x: x**2, range(1,11)))\r\n",
-    "print(map_ex)\r\n",
-    "\r\n",
-    "# List comprehension\r\n",
-    "list_ex = [num**2 for num in range(1,11)]\r\n",
+    "# Map function\n",
+    "map_ex = list(map(lambda x: x**2, range(1,11)))\n",
+    "print(map_ex)\n",
+    "\n",
+    "# List comprehension\n",
+    "list_ex = [num**2 for num in range(1,11)]\n",
     "print(list_ex)"
    ]
   },
@@ -387,14 +414,14 @@
     }
    ],
    "source": [
-    "from timeit import timeit\r\n",
-    "\r\n",
-    "# Time taken for map function\r\n",
-    "map_ex = timeit(\"list(map(lambda x: x**2, range(1,11)))\", number=10_000_000)\r\n",
-    "print(f'{map_ex = }')\r\n",
-    "\r\n",
-    "# Time taken for list comprehension\r\n",
-    "list_ex = timeit(\"[num**2 for num in range(1,11)]\", number=10_000_000)\r\n",
+    "from timeit import timeit\n",
+    "\n",
+    "# Time taken for map function\n",
+    "map_ex = timeit(\"list(map(lambda x: x**2, range(1,11)))\", number=10_000_000)\n",
+    "print(f'{map_ex = }')\n",
+    "\n",
+    "# Time taken for list comprehension\n",
+    "list_ex = timeit(\"[num**2 for num in range(1,11)]\", number=10_000_000)\n",
     "print(f'{list_ex = }')"
    ]
   },
@@ -402,8 +429,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List Comprehensions Vs filter( )\r\n",
-    "\r\n",
+    "# List Comprehensions Vs filter( )\n",
+    "\n",
     "A compreensão de lista pode ser uma alternativa à função de filter( ). E também é mais rápida que a mesma."
    ]
   },
@@ -422,12 +449,12 @@
     }
    ],
    "source": [
-    "# Filter function\r\n",
-    "filter_ex = list(filter(lambda x: x%2==0, range(1,11)))\r\n",
-    "print(filter_ex)\r\n",
-    "\r\n",
-    "# List comprehension\r\n",
-    "list_ex = [num for num in range(1,11) if num%2==0]\r\n",
+    "# Filter function\n",
+    "filter_ex = list(filter(lambda x: x%2==0, range(1,11)))\n",
+    "print(filter_ex)\n",
+    "\n",
+    "# List comprehension\n",
+    "list_ex = [num for num in range(1,11) if num%2==0]\n",
     "print(list_ex)"
    ]
   },
@@ -446,14 +473,14 @@
     }
    ],
    "source": [
-    "from timeit import timeit\r\n",
-    "\r\n",
-    "# Time taken for filter function\r\n",
-    "filter_ex = timeit(\"list(filter(lambda x: x%2==0, range(1,11)))\", number=10_000_000)\r\n",
-    "print(f'{filter_ex = }')\r\n",
-    "\r\n",
-    "# Time taken for list comprehension\r\n",
-    "list_ex = timeit(\"[num for num in range(1,11) if num%2==0]\", number=10_000_000)\r\n",
+    "from timeit import timeit\n",
+    "\n",
+    "# Time taken for filter function\n",
+    "filter_ex = timeit(\"list(filter(lambda x: x%2==0, range(1,11)))\", number=10_000_000)\n",
+    "print(f'{filter_ex = }')\n",
+    "\n",
+    "# Time taken for list comprehension\n",
+    "list_ex = timeit(\"[num for num in range(1,11) if num%2==0]\", number=10_000_000)\n",
     "print(f'{list_ex = }')"
    ]
   },
@@ -461,8 +488,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comprehensions de conjuntos { }\r\n",
-    "\r\n",
+    "# Comprehensions de conjuntos { }\n",
+    "\n",
     "Podemos criar compreensões de conjuntos, mas a única diferença é que eles estão entre chaves { }. O exemplo a seguir cria uma compreensão de conjunto a partir de uma lista. Ele converte todas as strings da lista em maiúsculas e cria um conjunto (é claro, removendo as duplicatas)."
    ]
   },
@@ -480,10 +507,10 @@
     }
    ],
    "source": [
-    "nomes = [\"python\", \"PYTHON\", \"simplified\", \"SIMPLIFIED\", \".\", \"com\", \"COM\"]\r\n",
-    "\r\n",
-    "conjunto = {nome.upper() for nome in nomes}\r\n",
-    "\r\n",
+    "nomes = [\"python\", \"PYTHON\", \"simplified\", \"SIMPLIFIED\", \".\", \"com\", \"COM\"]\n",
+    "\n",
+    "conjunto = {nome.upper() for nome in nomes}\n",
+    "\n",
     "print(conjunto)"
    ]
   },
@@ -491,8 +518,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comprehensions de dicionários {key: value}\r\n",
-    "\r\n",
+    "# Comprehensions de dicionários {key: value}\n",
+    "\n",
     "As compreensões do dicionário também estão entre { } colchetes, mas seu conteúdo segue o formato chave: valor conforme o esperado. O exemplo abaixo cria uma compreensão de dicionário a partir de uma lista. Ele cria um dicionário com string como chave e comprimento da string como valor. "
    ]
   },
@@ -510,10 +537,10 @@
     }
    ],
    "source": [
-    "nome = [\"Python\", \"Simplified\", \".\", \"Com\"]\r\n",
-    "\r\n",
-    "dicionario = { s: len(s) for s in nome}\r\n",
-    "\r\n",
+    "nome = [\"Python\", \"Simplified\", \".\", \"Com\"]\n",
+    "\n",
+    "dicionario = { s: len(s) for s in nome}\n",
+    "\n",
     "print(dicionario)"
    ]
   },
@@ -521,8 +548,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Expressões Geradoras ( )\r\n",
-    "\r\n",
+    "# Expressões Geradoras ( )\n",
+    "\n",
     "As expressões geradoras são muito semelhantes à compreensão de lista, com a diferença de que as expressões geradoras são colocadas entre parênteses ( ). Você poderia dizer que a compreensão do gerador é uma versão preguiçosa da compreensão da lista."
    ]
   },
@@ -545,15 +572,15 @@
     }
    ],
    "source": [
-    "gerador = (num**2 for num in range(1, 11) if num % 2 == 0)\r\n",
-    "\r\n",
-    "print(gerador)\r\n",
-    "\r\n",
-    "# aplicando lazy evaluetion\r\n",
-    "print(next(gerador))\r\n",
-    "print(next(gerador))\r\n",
-    "print(next(gerador))\r\n",
-    "print(next(gerador))\r\n",
+    "gerador = (num**2 for num in range(1, 11) if num % 2 == 0)\n",
+    "\n",
+    "print(gerador)\n",
+    "\n",
+    "# aplicando lazy evaluetion\n",
+    "print(next(gerador))\n",
+    "print(next(gerador))\n",
+    "print(next(gerador))\n",
+    "print(next(gerador))\n",
     "print(next(gerador))"
    ]
   },
@@ -571,8 +598,8 @@
     }
    ],
    "source": [
-    "# imprimindo tudo de uma unica vez com list\r\n",
-    "gerador = (num**2 for num in range(1, 11) if num % 2 == 0)\r\n",
+    "# imprimindo tudo de uma unica vez com list\n",
+    "gerador = (num**2 for num in range(1, 11) if num % 2 == 0)\n",
     "print(list(gerador))"
    ]
   },
@@ -580,8 +607,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Observações:**\r\n",
-    "\r\n",
+    "## **Observações:**\n",
+    "\n",
     "## _**Eficiência de armazenamento**_: uma compreensão de lista armazena a lista inteira na memória, enquanto um gerador produz um item por vez sob demanda. Conseqüentemente, as expressões geradoras são mais eficientes em termos de memória do que as listas. Como visto no exemplo abaixo, a mesma expressão geradora de código ocupa muito menos memória."
    ]
   },
@@ -600,12 +627,12 @@
     }
    ],
    "source": [
-    "from sys import getsizeof\r\n",
-    "\r\n",
-    "# Tamanho alocado em memória com list comprehension\r\n",
-    "print(getsizeof([i for i in range(10000)]))\r\n",
-    "\r\n",
-    "# Tamanho alocado em memória com generator expression\r\n",
+    "from sys import getsizeof\n",
+    "\n",
+    "# Tamanho alocado em memória com list comprehension\n",
+    "print(getsizeof([i for i in range(10000)]))\n",
+    "\n",
+    "# Tamanho alocado em memória com generator expression\n",
     "print(getsizeof((i for i in range(10000))))"
    ]
   },
@@ -613,8 +640,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Observações:**\r\n",
-    "\r\n",
+    "## **Observações:**\n",
+    "\n",
     "## _**Eficiência de velocidade**_: as compreensões de listas são mais rápidas do que as expressões geradoras. O mesmo código leva 2.91 segundos para a compreensão de listas, mas 4.23 segundos para expressões geradoras."
    ]
   },
@@ -633,12 +660,12 @@
     }
    ],
    "source": [
-    "from timeit import timeit\r\n",
-    "\r\n",
-    "# Time taken para list comprehensions\r\n",
-    "print(timeit(\"sys.getsizeof(sum([i for i in range(10000)]))\", number=10000))\r\n",
-    "\r\n",
-    "# Time taken para generator expression\r\n",
+    "from timeit import timeit\n",
+    "\n",
+    "# Time taken para list comprehensions\n",
+    "print(timeit(\"sys.getsizeof(sum([i for i in range(10000)]))\", number=10000))\n",
+    "\n",
+    "# Time taken para generator expression\n",
     "print(timeit(\"sys.getsizeof( sum(i for i in range(10000)) )\", number=10000))"
    ]
   },
