Varrendo uma lista de dicionários e retornando um total de uma key

--- a/Coleções_Python_Iteraveis/Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/Comprehensions.ipynb
@@ -204,6 +204,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Varrendo uma lista de dicionários e retornando um total de uma key\n",
+    "lista = [{'investor': 'Vreeland', 'expense': 'Expense', 'loss': 'Common Expense', 'date': '2021/08/25', 'categoria': 'Main -> Septic tank permit', 'parcial_value': '10.00', 'saldo': 90.0, \n",
+    "'label1': 'Partial', 'label2': 'Balance', 'label3': 'Date'}, {'investor': 'Vreeland', 'expense': 'Expense', \n",
+    "'loss': 'Common Expense', 'date': '2021/08/25', 'categoria': 'Main -> Energy cal.', 'parcial_value': '9.00', 'saldo': 81.0, 'label1': 'Partial', 'label2': 'Balance', 'label3': 'Date'}, {'investor': 'Vreeland', 'expense': 'Expense', 'loss': 'Common Expense', 'date': '2021/08/25', 'categoria': 'Main -> Energy cal.', 'parcial_value': '81.00', 'saldo': 0.0, 'label1': 'Partial', 'label2': 'Balance', 'label3': 'Date'}]\n",
+    "\n",
+    "total = sum([float(x[\"parcial_value\"]) for x in lista])\n",
+    "total"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
