add ex Contando qty de elementos de uma lista de dicionários > 0

--- a/Coleções_Python_Iteraveis/Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/Comprehensions.ipynb
@@ -475,6 +475,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contando qty de elementos de uma lista de dicionários > 0\n",
+    "\n",
+    "lista = [{'value': 0.0}, {'value': 1.0}, {'value': 0.0}, {'value': 1.0}, {'value': 0.0}, {'value': 1.0}, {'value': 1.0}]\n",
+    "\n",
+    "qty = [num for num in lista if num['value'] > 0.0]\n",
+    "\n",
+    "print(len(qty))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
