Dict em ordem crescente e decrescente OrderedDict + sorted

--- a/Coleções_Python_Iteraveis/Dict.ipynb
+++ b/Coleções_Python_Iteraveis/Dict.ipynb
@@ -831,6 +831,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h3><font color=#DAA520>Dict em ordem crescente e decrescente OrderedDict + sorted</font></h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_s = {'2021-46': 17800.0, '2021-36': 1200.0, '2021-48': 89606.0, '2021-47': 5200.0}\n",
+      "\n",
+      "data_s = OrderedDict([('2021-36', 1200.0), ('2021-46', 17800.0), ('2021-47', 5200.0), ('2021-48', 89606.0)])\n",
+      "\n",
+      "data_s = {'2021-36': 1200.0, '2021-46': 17800.0, '2021-47': 5200.0, '2021-48': 89606.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "data_s = {'2021-46': 17800.0, '2021-36': 1200.0, '2021-48': 89606.0, '2021-47': 5200.0}\n",
+    "print(f'{data_s = }')\n",
+    "\n",
+    "data_s = OrderedDict(sorted(data_s.items()))\n",
+    "\n",
+    "print(f'\\n{data_s = }')\n",
+    "\n",
+    "# Transformando lista de tuplas em dicionário\n",
+    "data_s = dict(data_s)\n",
+    "print(f'\\n{data_s = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3><font color=#DAA520> Três formas de Classificar uma lista de palavras de acordo com suas primeiras letras gerando um dicionário de listas</font></h3>"
    ]
   },
